small fix of row-column misalignment bug

--- a/src/irtableclassic.css
+++ b/src/irtableclassic.css
@@ -21,7 +21,6 @@
 }
 
 .irtableclassic-body {
-    width: fit-content;
 }
 
 .irtableclassic-footer {
